--- a/Session5.ipynb
+++ b/Session5.ipynb
@@ -1,179 +1,317 @@
-# %% [markdown]
-# # Session 5 – Working with Dictionaries
-# In this lesson we learn how to create, change, and loop through dictionaries in Python.
-
-# %%
-# 1. Introduction to Dictionaries
-
-student = {'name': 'Ali', 'age': 10}
-print(student['name'])
-print(student['age'])
-
-# %%
-# 2. Adding New Key-Value Pairs
-
-student['grade'] = 'Year 5'
-student['city'] = 'Perth'
-print(student)
-
-# %%
-# 3. Starting with an Empty Dictionary
-
-book = {}
-book['title'] = 'The Python Adventure'
-book['author'] = 'Sam Lee'
-print(book)
-
-# %%
-# 4. Modifying Values in a Dictionary
-
-book['title'] = 'The Big Python Adventure'
-print(f"Updated title: {book['title']}")
-
-player = {'x': 0, 'y': 0, 'speed': 'medium'}
-
-if player['speed'] == 'slow':
-    x_step = 1
-elif player['speed'] == 'medium':
-    x_step = 2
-else:
-    x_step = 3
-
-player['x'] = player['x'] + x_step
-print(f"New x position: {player['x']}")
-
-# %%
-# 5. Removing Key-Value Pairs
-
-snack = {'name': 'Apple', 'calories': 95}
-print(snack)
-
-del snack['calories']
-print(snack)
-
-# %%
-# 6. Using the get() Method
-
-settings = {'theme': 'dark', 'font_size': 14}
-language = settings.get('language', 'English')
-print(language)
-
-# %%
-# 7. Looping Through a Dictionary (items)
-
-favourite_fruits = {
-    'Sara': 'mango',
-    'Tom': 'apple',
-    'Aisha': 'banana',
-    'Liam': 'orange'
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Session 5 – Working with Dictionaries\n",
+    "In this lesson we learn how to create, change, and loop through dictionaries in Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 1. Introduction to Dictionaries\n",
+    "\n",
+    "student = {\"name\": \"Ali\", \"age\": 10}\n",
+    "print(student[\"name\"])\n",
+    "print(student[\"age\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 2. Adding New Key-Value Pairs\n",
+    "\n",
+    "student[\"grade\"] = \"Year 5\"\n",
+    "student[\"city\"] = \"Perth\"\n",
+    "print(student)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 3. Starting with an Empty Dictionary\n",
+    "\n",
+    "book = {}\n",
+    "book[\"title\"] = \"The Python Adventure\"\n",
+    "book[\"author\"] = \"Sam Lee\"\n",
+    "print(book)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 4. Modifying Values in a Dictionary\n",
+    "\n",
+    "book[\"title\"] = \"The Big Python Adventure\"\n",
+    "print(f\"Updated title: {book['title']}\")\n",
+    "\n",
+    "player = {\"x\": 0, \"y\": 0, \"speed\": \"medium\"}\n",
+    "\n",
+    "if player[\"speed\"] == \"slow\":\n",
+    "    x_step = 1\n",
+    "elif player[\"speed\"] == \"medium\":\n",
+    "    x_step = 2\n",
+    "else:\n",
+    "    x_step = 3\n",
+    "\n",
+    "player[\"x\"] = player[\"x\"] + x_step\n",
+    "print(f\"New x position: {player['x']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 5. Removing Key-Value Pairs\n",
+    "\n",
+    "snack = {\"name\": \"Apple\", \"calories\": 95}\n",
+    "print(snack)\n",
+    "\n",
+    "del snack[\"calories\"]\n",
+    "print(snack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 6. Using the get() Method\n",
+    "\n",
+    "settings = {\"theme\": \"dark\", \"font_size\": 14}\n",
+    "language = settings.get(\"language\", \"English\")\n",
+    "print(language)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 7. Looping Through a Dictionary (items)\n",
+    "\n",
+    "favourite_fruits = {\n",
+    "    \"Sara\": \"mango\",\n",
+    "    \"Tom\": \"apple\",\n",
+    "    \"Aisha\": \"banana\",\n",
+    "    \"Liam\": \"orange\"\n",
+    "}\n",
+    "\n",
+    "for name, fruit in favourite_fruits.items():\n",
+    "    print(f\"{name}'s favourite fruit is {fruit}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 8. Looping Through All Keys (keys)\n",
+    "\n",
+    "for name in favourite_fruits.keys():\n",
+    "    print(f\"Hello, {name}!\")\n",
+    "\n",
+    "print(\"\\nIn alphabetical order:\")\n",
+    "for name in sorted(favourite_fruits.keys()):\n",
+    "    print(f\"{name}, thanks for sharing your favourite fruit.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 9. Looping Through All Values (values)\n",
+    "\n",
+    "print(\"\\nFruits mentioned:\")\n",
+    "for fruit in favourite_fruits.values():\n",
+    "    print(fruit.title())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 10. Finding Unique Values with set()\n",
+    "\n",
+    "print(\"\\nUnique fruits mentioned:\")\n",
+    "for fruit in set(favourite_fruits.values()):\n",
+    "    print(fruit.title())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 11. Nesting Dictionaries – list of dictionaries\n",
+    "\n",
+    "pet_1 = {\"type\": \"cat\", \"name\": \"Milo\"}\n",
+    "pet_2 = {\"type\": \"dog\", \"name\": \"Bella\"}\n",
+    "pet_3 = {\"type\": \"fish\", \"name\": \"Bubbles\"}\n",
+    "\n",
+    "pets = [pet_1, pet_2, pet_3]\n",
+    "\n",
+    "for pet in pets:\n",
+    "    print(pet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 11 (continued). Generating a list of students\n",
+    "\n",
+    "students = []\n",
+    "\n",
+    "for number in range(5):\n",
+    "    new_student = {\"name\": f\"Student{number + 1}\", \"grade\": \"Year 5\", \"city\": \"Perth\"}\n",
+    "    students.append(new_student)\n",
+    "\n",
+    "for student in students[:2]:\n",
+    "    student[\"grade\"] = \"Year 6\"\n",
+    "\n",
+    "for student in students:\n",
+    "    print(student)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 11 (continued). List in a dictionary\n",
+    "\n",
+    "order = {\n",
+    "    \"customer\": \"Zoe\",\n",
+    "    \"drinks\": [\"coffee\", \"orange juice\"]\n",
+    "}\n",
+    "\n",
+    "print(f\"\\n{order['customer']} ordered the following drinks:\")\n",
+    "for drink in order[\"drinks\"]:\n",
+    "    print(f\"\\t{drink}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# 12. Dictionary in a Dictionary\n",
+    "\n",
+    "users = {\n",
+    "    \"ali123\": {\n",
+    "        \"first\": \"Ali\",\n",
+    "        \"last\": \"Khan\",\n",
+    "        \"city\": \"Perth\"\n",
+    "    },\n",
+    "    \"sara99\": {\n",
+    "        \"first\": \"Sara\",\n",
+    "        \"last\": \"Nguyen\",\n",
+    "        \"city\": \"Sydney\"\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "for username, user_info in users.items():\n",
+    "    print(f\"\\nUsername: {username}\")\n",
+    "    full_name = f\"{user_info['first']} {user_info['last']}\"\n",
+    "    city = user_info[\"city\"]\n",
+    "    print(f\"\\tFull name: {full_name}\")\n",
+    "    print(f\"\\tCity: {city}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1 – Classroom Scores\n",
+    "1. Create a dictionary called `classroom` where keys are student names and values are maths scores.\n",
+    "2. Print each student's name and score.\n",
+    "3. Add a new student and score.\n",
+    "4. Change one student's score.\n",
+    "5. Print names of students who scored 80 or more."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "classroom = {\n",
+    "    \"Ali\": 75,\n",
+    "    \"Sara\": 88,\n",
+    "    \"Tom\": 92\n",
+    "}\n",
+    "\n",
+    "# TODO: Complete the exercise steps here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2 – Library System\n",
+    "1. Create a dictionary called `library` where each key is a book id (e.g. `'b1'`).\n",
+    "2. Each value should be another dictionary with keys `'title'`, `'author'`, `'available'`.\n",
+    "3. Loop through and print details of each book.\n",
+    "4. Change one book so `available` becomes `False`.\n",
+    "5. Use `get()` to safely check if a book id exists before printing it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "library = {\n",
+    "    # Example starter:\n",
+    "    # \"b1\": {\"title\": \"The Python Adventure\", \"author\": \"Sam Lee\", \"available\": true}\n",
+    "}\n",
+    "\n",
+    "# TODO: Complete the exercise steps here."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
-
-for name, fruit in favourite_fruits.items():
-    print(f"{name}'s favourite fruit is {fruit}.")
-
-# %%
-# 8. Looping Through All Keys (keys)
-
-for name in favourite_fruits.keys():
-    print(f"Hello, {name}!")
-
-print("\nIn alphabetical order:")
-for name in sorted(favourite_fruits.keys()):
-    print(f"{name}, thanks for sharing your favourite fruit.")
-
-# %%
-# 9. Looping Through All Values (values)
-
-print("\nFruits mentioned:")
-for fruit in favourite_fruits.values():
-    print(fruit.title())
-
-# %%
-# 10. Finding Unique Values with set()
-
-print("\nUnique fruits mentioned:")
-for fruit in set(favourite_fruits.values()):
-    print(fruit.title())
-
-# %%
-# 11. Nesting Dictionaries – list of dictionaries
-
-pet_1 = {'type': 'cat', 'name': 'Milo'}
-pet_2 = {'type': 'dog', 'name': 'Bella'}
-pet_3 = {'type': 'fish', 'name': 'Bubbles'}
-
-pets = [pet_1, pet_2, pet_3]
-
-for pet in pets:
-    print(pet)
-
-# %%
-# 11 (continued). Generating a list of students
-
-students = []
-
-for number in range(5):
-    new_student = {'name': f'Student{number + 1}', 'grade': 'Year 5', 'city': 'Perth'}
-    students.append(new_student)
-
-for student in students[:2]:
-    student['grade'] = 'Year 6'
-
-for student in students:
-    print(student)
-
-# %%
-# 11 (continued). List in a dictionary
-
-order = {
-    'customer': 'Zoe',
-    'drinks': ['coffee', 'orange juice']
-}
-
-print(f"\n{order['customer']} ordered the following drinks:")
-for drink in order['drinks']:
-    print(f"\t{drink}")
-
-# %%
-# 12. Dictionary in a Dictionary
-
-users = {
-    'ali123': {
-        'first': 'Ali',
-        'last': 'Khan',
-        'city': 'Perth'
-    },
-    'sara99': {
-        'first': 'Sara',
-        'last': 'Nguyen',
-        'city': 'Sydney'
-    }
-}
-
-for username, user_info in users.items():
-    print(f"\nUsername: {username}")
-    full_name = f"{user_info['first']} {user_info['last']}"
-    city = user_info['city']
-    print(f"\tFull name: {full_name}")
-    print(f"\tCity: {city}")
-
-# %%
-# EXERCISE 1: Classroom Scores
-
-classroom = {
-    'Ali': 75,
-    'Sara': 88,
-    'Tom': 92
-}
-
-# TODO: Complete the steps described in the comments in the .py version
-
-# %%
-# EXERCISE 2: Library System
-
-library = {
-    # Example starter:
-    # 'b1': {'title': 'The Python Adventure', 'author': 'Sam Lee', 'available': True}
-}
-
-# TODO: Complete the steps described in the comments in the .py version
